--- a/styles/scss/layout/_footer.scss
+++ b/styles/scss/layout/_footer.scss
@@ -163,6 +163,10 @@ footer.footer {
     background-color: $color-white;
     padding: 34px 25px;
 
+    & .wrapper {
+      padding: unset;
+    }
+
     @media screen and (max-width: 600px) {
       text-align: center;
     }
